# swingtrader-app

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  swingtrader-phase1-price-action-no-root-readme.patch
.github/workflows/: ci.yml
docs/: index.md
docs/architecture/: overview.md  roadmap.md  ticker-universes.md  trading-objective.md
docs/architecture/decisions/: 0001-fastapi-react-application-boundary.md  0002-scheduled-inference-and-persisted-predictions.md  0003-separate-research-targets-from-executable-evaluation.md  0004-adjustment-consistent-model-prices.md  0005-versioned-feature-set-contract.md  index.md
docs/data/: bronze.md  eligibility.md  features.md  ingestion.md  overview.md  ticker-onboarding.md
docs/deployment/: render.md
docs/getting-started/: development.md  first-ingestion.md  installation.md
docs/modeling/: overview.md  target-and-evaluation.md
docs/operations/: daily-runbook.md  troubleshooting.md
docs/reference/: api.md  glossary.md
docs/tutorials/: preview-documentation.md  run-local-checks.md  update-dependencies.md  update-market-data.md
frontend/: README.md
notebooks/data_exploration/: 00_create_ticker_universes.ipynb
notebooks/workflows/data/: 00_create_ticker_universes.ipynb
src/swingtrader/api/: README.md
src/swingtrader/configs/: market_data.yml
src/swingtrader/configs/universes/: active_tickers.yml  se_large_cap.yml  se_mid_cap.yml
src/swingtrader/core/: README.md  config.py  db.py  logging_config.py  numerical.py
src/swingtrader/data/: README.md  db.py  eligibility.py  market_frame.py
src/swingtrader/data/bronze/: README.md  __init__.py  loaders.py  queries.py  schema.py  writer.py
src/swingtrader/data/clients/: __init__.py  yfinance.py
src/swingtrader/data/features/: README.md  __init__.py  _numerical.py  _price_adjustment.py  _validation.py  catalog.py  contracts.py  feature_sets.py  market_structure.py  momentum.py  pipeline.py  price_action.py  returns.py  trend.py  trends.py  volatility.py  volume.py
src/swingtrader/data/ingestion/: __init__.py  market_data.py  market_data_settings.py  onboarding.py  universe.py  universe_selection.py  validation.py
src/swingtrader/data/jobs/: __init__.py  onboard_market_data.py  update_market_data.py
src/swingtrader/indicators/: README.md  __init__.py  _price_levels.py  _smoothing.py  _validation.py  candlesticks.py  directional_movement.py  macd.py  market_structure.py  moving_averages.py  oscillators.py  squeeze_momentum.py  volatility.py  volume.py
src/swingtrader/modeling/: README.md
src/swingtrader/modeling/datasets/: __init__.py  catalog.py  contracts.py  labels.py
src/swingtrader/web/: README.md
tests/: test_package.py
tests/core/: test_db.py  test_logging_config.py  test_numerical.py
tests/data/: test_data_db.py  test_eligibility.py  test_market_frame.py
tests/data/bronze/: test_loaders.py  test_queries.py  test_schema.py  test_writer.py
tests/data/clients/: test_yfinance.py
tests/data/features/: test_candle_direction_run_features.py  test_feature_sets.py  test_market_structure.py  test_market_structure_consistency.py  test_market_structure_dynamics.py  test_market_structure_level_interactions.py  test_market_structure_trend.py  test_market_structure_validation.py  test_momentum.py  test_numerical.py  test_pipeline.py  test_price_action.py  test_price_adjustment.py  test_price_level_features.py  test_returns.py  test_trend.py  test_trends.py  test_validation.py  test_volatility.py  test_volume.py
tests/data/ingestion/: test_market_data.py  test_market_data_settings.py  test_onboarding.py  test_universe.py  test_universe_selection.py
tests/data/jobs/: test_onboard_market_data.py  test_update_market_data.py
tests/indicators/: test_candle_direction_runs.py  test_candlesticks.py  test_directional_movement.py  test_macd.py  test_market_structure.py  test_market_structure_dynamics.py  test_moving_averages.py  test_oscillators.py  test_rolling_level_interactions.py  test_smoothing.py  test_squeeze_momentum.py  test_validation.py  test_volatility.py  test_volume.py  test_zigzag.py
tests/modeling/datasets/: test_labels.py  test_target_contracts.py
