[project]
name = "swingtrader-app"
version = "0.1.0"
description = "An application to do some swingtrading with."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swingtrader"]

[project.optional-dependencies]
data = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.4.1",
]
web = [
    "dash>=4.3.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "sqlalchemy>=2.0.51",
]
postgres = [
    "psycopg[binary]>=3.3.4",
]
modeling = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
notebook = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
]
