[project]
name = "swingtrader-app"
version = "0.1.0"
description = "Swing-trading research and decision-support application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swingtrader"]

[project.optional-dependencies]
data = [
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "yfinance>=1.4.1",
]
postgres = [
    "psycopg[binary]>=3.3.4",
]
# Add a `modeling` extra when model training is introduced.
# Add an `api` extra when the FastAPI backend is introduced.

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.0",
]
notebook = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.6.0",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "nbstripout>=0.9.1",
    "plotly>=6.9.0",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]
